objects/Success_Program__c.object
<CustomObject>
    <description>Used to define a program that is executed against an account to drive adoption and secure acv</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Idea</fullName>
                    <default>true</default>
                    <label>Idea</label>
                </value>
                <value>
                    <fullName>Concept</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Maturity_Level__c</fullName>
        <label>Target Maturity Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 - Select &amp; Deploy</fullName>
                </value>
                <value>
                    <fullName>Level 2 - Version Control</fullName>
                </value>
                <value>
                    <fullName>Level 3 - Agile Releases</fullName>
                </value>
                <value>
                    <fullName>Level 4 - Intelligent Automation</fullName>
                </value>
                <value>
                    <fullName>Level 5 - Continuous Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSM Executed</fullName>
                </value>
                <value>
                    <fullName>Services Executed</fullName>
                </value>
                <value>
                    <fullName>Evangelism Executed</fullName>
                </value>
                <value>
                    <fullName>Product Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Success Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Target_Maturity_Level__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Success Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>